src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_5.snap
---
source: src/parser/test.rs
description: "foo[@]"
expression: result
---
[
    Index {
        token: Token(LBracket, "[", (0,3)->(0,4)),
        object: Identifier {
            token: Token(Identifier, "foo", (0,0)->(0,3)),
            name: "foo",
        },
        index: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,4)->(0,5)),
        ),
    },
]

===================================

foo[@]
    ^ [Error] SyntaxError: Unexpected '@'.
